# advent2018

haskell/: .gitignore  LICENSE  advent2018.cabal
haskell/src/: Advent.hs  Day_01.hs  Day_02.hs
haskell/test/: Day_01Test.hs  Day_02Test.hs
