cabal-version: 2.2
name: advent2018
version: 0.1.0.1
license: BSD-3-Clause
license-file: LICENSE
maintainer: tom@losthalo.org
author: Tom Kurth
extra-source-files:
    CHANGELOG.md

library
    exposed-modules:
        Day_01
        Day_02
    hs-source-dirs: src
    other-modules:
        Advent
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base ^>=4.11.1.0,
        directory ^>=1.3,
        filepath ^>=1.4,
        Cabal ^>=2.2,
        tasty ^>=1.2,
        tasty-discover ^>=4.2,
        tasty-hunit ^>=0.10

test-suite test
    type: exitcode-stdio-1.0
    main-is: Driver.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -Wno-missing-home-modules
    build-depends:
        base -any,
        advent2018 -any,
        tasty ^>=1.2,
        tasty-discover ^>=4.2,
        tasty-hunit ^>=0.10